[package]
name = "session-types"
version = "0.0.2"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
serde = "*"
channels = { path = "./channels" }
log = "*"

[dev-dependencies]
num = { version = "*", features = ["rand", "serde"] }
# num-bigint = "*"
openssl = "*"
rand = "*"
docopt = "*"
env_logger = "*"
