[package]
name = "acolytes"
version = "0.0.1"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[workspace]
members = [
    "channels",
    "session-types",
]

[dependencies]
serde = "*"
session-types = { path = "./session-types" }
channels = { path = "./channels" }
log = "*"

[dev-dependencies]
num = { version = "*", features = ["rand", "serde"] }
# num-bigint = "*"
openssl = "*"
rand = "*"
docopt = "*"
env_logger = "*"
